--- a/Dockerfile-cooccurrence
+++ b/Dockerfile-cooccurrence
@@ -16,7 +16,7 @@ RUN apt-get install -y \
     python3-dev 
 
 
-RUN pip3 install --no-cache-dir numpy pandas pandasql sklearn tabulate scipy pyensembl scikit-allel hmmlearn
+RUN pip3 install --no-cache-dir numpy pandas pandasql sklearn tabulate scipy pyensembl scikit-allel hmmlearn matplotlib
 
 
 RUN pyensembl install --release 75 --species homo_sapiens
