--- a/docker/cooccurrence/Dockerfile
+++ b/docker/cooccurrence/Dockerfile
@@ -16,8 +16,8 @@ RUN apt-get install -y \
     python3-dev 
 
 
-#RUN pip3 install --no-cache-dir numpy pandas pandasql sklearn tabulate scipy pyensembl scikit-allel hmmlearn matplotlib
-RUN pip3 install --no-cache-dir numpy pandas pyensembl scikit-allel 
+RUN pip3 install --no-cache-dir numpy pandas pandasql sklearn tabulate scipy pyensembl scikit-allel hmmlearn matplotlib
+#RUN pip3 install --no-cache-dir numpy pandas pyensembl scikit-allel 
 
 
 RUN pyensembl install --release 75 --species homo_sapiens
