refactor bash run script to use args

--- a/config/quality-report-config.json
+++ b/config/quality-report-config.json
@@ -1,5 +1,5 @@
 {
-	"outputFile": "",
+	"outputFile": "/data/data-quality-report.txt",
 	"fileName": "/data/shuffle.tsv",
 	"fileHeader": "True",
 	"fieldDelimiter": "\t",
