need path report in report config

--- a/examples/BRCA/config/brca2-report-config.json
+++ b/examples/BRCA/config/brca2-report-config.json
@@ -1,5 +1,6 @@
 {
   "qualityReport": "data/BRCA2-data-quality-report.txt",
+  "pathologyReport": "/dev/null",
   "fileName": "data/brca2-pathology.tsv",
   "fileHeader": "True",
   "fieldDelimiter": "\t",
