added functionality to check range of numericals

--- a/config/quality-report-config.json
+++ b/config/quality-report-config.json
@@ -1,26 +1,42 @@
 {
-	"outputFile": "/data/data-quality-report.txt",
-	"fileName": "/data/shuffle.tsv",
-	"fileHeader": "True",
-	"fieldDelimiter": "\t",
-	"printConfigFileInfo": "False",
-	"printBadValues": "False",
-	"suppressAllOutput": "False",
-	"fieldFilters": [
-		{"fieldName": "ER", "fieldType": "categorical", "fieldValues": ["Positive", "Negative", "NA"], "printFieldCount": "True"},
-		{"fieldName": "PgR", "fieldType": "categorical", "fieldValues": ["Positive", "Negative", "NA"], "printFieldCount": "True"},
-		{"fieldName": "HER2", "fieldType": "categorical", "fieldValues": ["0", "1+", "2+", "3+", "NA"], "printFieldCount": "True"},
-		{"fieldName": "Age at onset", "fieldType": "numerical", "fieldValues": [], "printFieldCount": "True", "printStats": "True"},
-		{"fieldName": "Ovarian cancer history", "fieldType": "numerical", "fieldValues": [], "printFieldCount": "True", "printStats": "True"},
-		{"fieldName": "Family history / breast cancer", "fieldType": "numerical", "fieldValues": [0, 1], "printFieldCount": "True", "printStats": "True"},
-		{"fieldName": "Family history / pancreatic cancer", "fieldType": "numerical", "fieldValues": [0, 1], "printFieldCount": "True", "printStats": "True"},
-		{"fieldName": "Family history / ovarian cancer", "fieldType": "numerical", "fieldValues": [0, 1], "printFieldCount": "True", "printStats": "True"},
-		{"fieldName": "Family history / stomach cancer", "fieldType": "numerical", "fieldValues": [0, 1], "printFieldCount": "True", "printStats": "True"},
-		{"fieldName": "Family history / liver cancer", "fieldType": "numerical", "fieldValues": [0, 1], "printFieldCount": "True", "printStats": "True"},
-		{"fieldName": "Family history / bone tumor", "fieldType": "numerical", "fieldValues": [0, 1], "printFieldCount": "True", "printStats": "True"},
-		{"fieldName": "Family history / bladder cancer", "fieldType": "numerical", "fieldValues": [], "printFieldCount": "True", "printStats": "True"},
-		{"fieldName": "TNM classification / N", "fieldType": "categorical", "fieldValues": ["0", "1", "2", "3", "NA"], "printFieldCount": "True", "printStats": "True"},
-		{"fieldName": "TNM classification / M", "fieldType": "categorical", "fieldValues": ["0", "1", "NA"], "printFieldCount": "True", "printStats": "True"},
-		{"fieldName": "Tissue type (3 groups)", "fieldType": "free-form", "fieldValues": ["ascii", "utf-8"], "printFieldCount": "True"},
-		{"fieldName": "CarrierGene", "fieldType": "categorical", "fieldValues": [], "printFieldCount": "True"}]
+  "qualityReport": "data/data-quality-report.txt",
+  "pathologyReport": "data/tumor-pathology-report.txt",
+  "fileName": "data/shuffle.tsv", "fileHeader": "True",
+  "fieldDelimiter": "\t", "printConfigFileInfo": "False",
+  "printBadValues": "False", "suppressAllOutput": "False",
+  "RScriptPath": "/usr/bin/Rscript",
+  "fieldFilters": [
+    {"fieldName": "ER", "fieldType": "categorical", 
+	"fieldValues": ["Positive", "Negative", "NA"], "printFieldCount": "True"},
+    {"fieldName": "PgR", "fieldType": "categorical", 
+	"fieldValues": ["Positive", "Negative", "NA"], "printFieldCount": "True"},
+    {"fieldName": "HER2", "fieldType": "categorical", 
+	"fieldValues": ["0", "1+", "2+", "3+", "NA"], "printFieldCount": "True"},
+    {"fieldName": "Age at onset", "fieldType": "numerical", 
+	"fieldValues": [], "printFieldCount": "True", "printStats": "True"},
+    {"fieldName": "Ovarian cancer history", "fieldType": "numerical", 
+	"fieldValues": [], "printFieldCount": "True", "printStats": "True"},
+    {"fieldName": "Family history / breast cancer", "fieldType": "numerical", 
+	"fieldValues": [0, 1], "printFieldCount": "True", "printStats": "True"},
+    {"fieldName": "Family history / pancreatic cancer", "fieldType": "numerical", 
+	"fieldValues": [0, 1], "printFieldCount": "True", "printStats": "True"},
+    {"fieldName": "Family history / ovarian cancer", "fieldType": "numerical", 
+	"fieldValues": [0, 1], "printFieldCount": "True", "printStats": "True"},
+    {"fieldName": "Family history / stomach cancer", "fieldType": "numerical", 
+	"fieldValues": [0, 1], "printFieldCount": "True", "printStats": "True"},
+    {"fieldName": "Family history / liver cancer", "fieldType": "numerical", 
+	"fieldValues": [0, 1], "printFieldCount": "True", "printStats": "True"},
+    {"fieldName": "Family history / bone tumor", "fieldType": "numerical", 
+	"fieldValues": [0, 1], "printFieldCount": "True", "printStats": "True"},
+    {"fieldName": "Family history / bladder cancer", "fieldType": "numerical", 
+	"fieldValues": [], "printFieldCount": "True", "printStats": "True"},
+    {"fieldName": "TNM classification / N", "fieldType": "categorical", 
+	"fieldValues": ["0", "1", "2", "3", "NA"], "printFieldCount": "True", 
+	"printStats": "True"},
+    {"fieldName": "TNM classification / M", "fieldType": "categorical", 
+	"fieldValues": ["0", "1", "NA"], "printFieldCount": "True", "printStats": "True"},
+    {"fieldName": "Tissue type (3 groups)", "fieldType": "free-form", 
+	"fieldValues": ["ascii", "utf-8"], "printFieldCount": "True"},
+    {"fieldName": "CarrierGene", "fieldType": "categorical", 
+	"fieldValues": [], "printFieldCount": "True"}]
 }
