--- a/examples/MYH7/config/myh7-report-config.json
+++ b/examples/MYH7/config/myh7-report-config.json
@@ -5,14 +5,14 @@
   "fileHeader": "True",
   "fieldDelimiter": "\t",
   "printConfigFileInfo": "False",
-  "printBadValues": "False",
+  "printBadValues": "True",
   "suppressAllOutput": "False",
   "RScriptPath": "/usr/bin/Rscript",
   "fieldFilters": [
     {"fieldName": "Technique", "fieldType": "categorical", 
 	"fieldValues": ["MOLLI", "ShMOLLI", "NA"], "printFieldCount": "True"},
     {"fieldName": "Age at onset", "fieldType": "numerical", 
-	"fieldValues": [], "printFieldCount": "True", "printStats": "True"},
+	"fieldValues": ["low":0, "high": 120], "printFieldCount": "True", "printStats": "True"},
     {"fieldName": "Native T1 (msec)", "fieldType": "numerical", 
 	"fieldValues": [], "printFieldCount": "True", "printStats": "True"},
     {"fieldName": "ECV", "fieldType": "numerical", 
